@@ -1,3 +1,9 @@
+2013-02-06  Jeremy Bennett <jeremy.bennett@embecosm.com>
+
+	* build-all.sh, run-tests.sh: Correct handling of --jobs, --load
+	and --single-thread.
+	* build-uclibc.sh: Correct typo in gdbserver config.
+
 2013-02-05  Jeremy Bennett <jeremy.bennett@embecosm.com>
 
 	* dejagnu/baseboards/arc-linux-aa4.exp: Correct layout
